[package]
name = "warp-no-limit"
version = "1.0.0"
edition = "2021"
authors = ["Moti"]
description = "Warp Terminal Bypass Tool - Reliable Automatic Reset"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
sysinfo = "0.31"
walkdir = "2.5"
regex = "1.10"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
